<resources>
    <string name="app_name">Application</string>

    <string name="txt_peso">Weight</string>
    <string name="txt_altura">Height</string>

    <string name="txt_ejemplo_peso">Example: 75.5</string>
    <string name="txt_ejemplo_altura">Example: 1.80</string>


    <string name="btn_calcular">Calculate IMC</string>

    <string name="infrapeso">Under Weight</string>
    <string name="normal">Normal</string>
    <string name="sobrepeso">Over Weight</string>
    <string name="obesidad">Obesity</string>

    <string name="btn_volver">Back</string>
    <string name="txt_IMC">Your IMC is:</string>
    <string name="txt_valor_IMC">0</string>

    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>





</resources>